src/test/resources/AttributeCheck/negative/WrongSourceAttributeThis1.ls
class A {

  syn s1 : int;
  syn s2 : int;

  p ("") {
    this.s1 = this.s2;
  }

}
